Custom User Model, Consolidated Apps, Refactored Test
